fixed right white space caused by welcome heroimg

--- a/mycustomstyles.css
+++ b/mycustomstyles.css
@@ -9,6 +9,7 @@
     box-shadow: 5px 5px 10px rgba(0,0,0,0.3),
     -5px -5px 10px rgba(255,255,255,0.5);
     border: 1px solid rgba(255,255,255, 0.2);
+    
 }
 
 .nmpanel img {
@@ -18,9 +19,11 @@
 }
 
 .nmpaneltxt {
-    height: 300px;
+    height: 160px;
     text-align: justify;
     padding:10px;
+    background-color: white;
+    border-radius: 0 0 10px 10px;
 }
 
 
